2021-12-10 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* .version,
	  Makefile.common.in,
	  Makefile.in,
	  configure,
	  configure.ac,
	  device/include/asm/sm83,
	  device/include/math.h,
	  device/include/sdcc-lib.h,
	  device/include/setjmp.h,
	  device/include/stdarg.h,
	  device/include/stdatomic.h,
	  device/lib/Makefile.in,
	  device/lib/_memset.c,
	  device/lib/_mullong.c,
	  device/lib/atomic_flag_clear.c,
	  device/lib/sm83,
	  doc/sdccman.lyx,
	  sdcc.spec,
	  src/SDCCast.c,
	  src/SDCCglobl.h,
	  src/SDCCglue.c,
	  src/SDCCmain.c,
	  src/SDCCopt.c,
	  src/SDCCpeeph.c,
	  src/port.h,
	  src/z80/gen.c,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/ralloc.c,
	  src/z80/ralloc2.cc,
	  src/z80/z80.h,
	  support/regression/fwk/include/testfwk.h,
	  support/regression/ports/ucgbz80/spec.mk,
	  support/regression/tests/banked.c,
	  support/regression/tests/bug-2305.c,
	  support/regression/tests/bug-3296.c,
	  support/regression/tests/bug2729218.c,
	  support/regression/tests/bug3379723.c,
	  support/regression/tests/gcc-torture-execute-20031012-1.c,
	  support/regression/tests/malloc.c,
	  support/regression/tests/mm-pnvi-ae-udi-pointer_from_integer_2g.c,
	  support/regression/tests/sdcccall.c,
	  support/scripts/sdcc.nsi,
	  support/valdiag/Makefile.in,
	  support/valdiag/tests/bug-2798.c,
	  support/valdiag/valdiag.py:
	  Rename gbz80 port to sm83.

2021-11-22 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c,
	  src/stm8/main.c:
	  Support GETBYTE and GETWORD.
	* src/SDCCsalloc.hpp:
	  Fix an issue in shifts of partially spilt variables.

2021-11-20 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Fix bug-3129 z80 on FreeBSD 13 regression.

2021-11-19 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/z80/gen.c:
	  Use SM83 ldh in code generation.

2021-11-18 Philipp Klaus Krause <krauseph@informatik.uni-freiburg.de>

	* src/stm8/gen.c:
	  Fix bug #3296.
