@@ -77,7 +77,7 @@
 
 #undef OPT_DISABLE_MCS51
 #undef OPT_DISABLE_Z80
-#undef OPT_DISABLE_GBZ80
+#undef OPT_DISABLE_SM83
 #undef OPT_DISABLE_TLCS90
 #define OPT_DISABLE_AVR   1
 #undef OPT_DISABLE_TININative
